[package]
name = "digenum"
version = "0.1.1"
edition = "2021"
description = "An enum variant extractor"
repository = "https://github.com/Defmc/digenum"
license = "MIT"
readme = "README.md"
keywords = ["macro", "derive", "macros"]
categories = ["rust-patterns"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.50"
quote = "1.0.23"
syn = { version = "1.0.107", features = ["full"] }

[lib]
proc-macro = true
